<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.HomeFragment"
    android:gravity="center">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:hint="@string/user_name"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textPassword"
        android:padding="20dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"/>

</LinearLayout>