<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.BinaryFileFragment"
    android:gravity="center">

        <LinearLayout
            android:padding="20dp"
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_toStartOf="@id/pdf_submit">
            <TextView
                android:id="@+id/file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/attachment"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_attach_file_24"
                />
        </LinearLayout>

    <TextView
        android:id="@+id/remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/place_the_cv"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:layout_below="@id/linear"
        android:layout_marginTop="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_alignParentEnd="true"
        android:enabled="false"
        android:id="@+id/pdf_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</RelativeLayout>